--- a/.github/workflows/main_fire-warden-tracking-system.yml
+++ b/.github/workflows/main_fire-warden-tracking-system.yml
@@ -1,4 +1,7 @@
-name: Build and deploy Node.js app to Azure Web App - fire-warden-tracking-system
+# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
+# More GitHub Actions for Azure: https://github.com/Azure/actions
+
+name: Build and deploy Node.js app to Azure Web App - fire-warden-tracking-system-bs3221
 
 on:
   push:
@@ -10,7 +13,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: read # This is required for actions/checkout
 
     steps:
       - uses: actions/checkout@v4
@@ -20,29 +23,14 @@ jobs:
         with:
           node-version: '22.x'
 
-      # Build React frontend
-      - name: Install and build React frontend
-        working-directory: ./web-app
+      - name: npm install, build, and test
         run: |
           npm install
-          npm run build
+          npm run build --if-present
+          npm run test --if-present
 
-      # Install backend dependencies
-      - name: Install backend dependencies
-        working-directory: ./backend
-        run: npm install
-
-      # Copy React build into backend folder
-      - name: Copy React build to backend folder
-        run: |
-          rm -rf backend/web-app/build
-          cp -r web-app/build backend/web-app/build
-
-      # Zip backend folder for deployment
-      - name: Zip backend folder for deployment
-        run: |
-          cd backend
-          zip -r ../release.zip .
+      - name: Zip artifact for deployment
+        run: zip -r release.zip ./*
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -57,8 +45,8 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write
-      contents: read
+      id-token: write # This is required for requesting the JWT
+      contents: read # This is required for actions/checkout
 
     steps:
       - name: Download artifact from build job
@@ -68,17 +56,18 @@ jobs:
 
       - name: Unzip artifact for deployment
         run: unzip release.zip
-
+      
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_33DC9B37FECB4130B383F378D3E92B3E }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_D45319EC148A4442855991D3AA97076B }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_987490577D1A4C368F377676076514E7 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_D6954F3F56AC46758A1C5B9A2F733C40 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_D1EAA407587E4FDFB8931F5D3FD9AD13 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_5A092D6DD7EE4A368F59DCFF7B3BC33E }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'fire-warden-tracking-system'
+          app-name: 'fire-warden-tracking-system-bs3221'
+          slot-name: 'Production'
           package: .
